# browser-use-mcp

./: README.md  pyproject.toml
src/: server.py
