[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browser-use-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for automating browser tasks using Browser Use API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Hadi Hazarabad"},
]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
browser-use-mcp = "src.server:main"

[project.urls]
Repository = "https://github.com/mhazarabad/browser-use-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src"] 